--- a/assignments/weathersite/storm-center.html
+++ b/assignments/weathersite/storm-center.html
@@ -37,7 +37,8 @@
 
         <main>
             <form action="thanks.html" method="get" id="stormReport"> <h1>Storm Report Submission Form</h1>
-                <fieldset> <h2>Personal Information:</h2>
+                <fieldset> 
+                    <h2>Personal Information:</h2>
                     <div>
                         <!-- full name using input of type text and is required and only accepts alpha characters with a minimum of five characters using a regular expression pattern. -->
                         <label for="fullName">Please enter your full name:<br> 
