--- a/assignments/termProject/contactus.html
+++ b/assignments/termProject/contactus.html
@@ -34,10 +34,10 @@
                     <div class="dropdown-Content">
                         <a href="services.html">Services</a>
                         <a href="reception.html">Reception</a>
-                        <a class="active" href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
+                        <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
                     </div>
                 </div>  
-            <a href="contactus.html">Contact</a>
+            <a class="active" href="contactus.html">Contact</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <main>
