--- a/assignments/termProject/index.html
+++ b/assignments/termProject/index.html
@@ -133,6 +133,7 @@
                 <script src="scripts/currentdate.js"> </script>
                 <script src="scripts/hamburger.js"> </script>
                 <script src="scripts/temple.js"></script>
+                <script src="scripts/button.js"></script>
         
             </body>
         </html>
