--- a/assignments/termProject/reception.html
+++ b/assignments/termProject/reception.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Home Page | Temple Inn Suites</title>
+        <title>Reception Page | Temple Inn Suites</title>
 
         <!-- This the normalize.css file link that must be first before any other links!-->
         <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
@@ -33,15 +33,36 @@
                 <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
                     <div class="dropdown-Content">
                         <a href="services.html">Services</a>
-                        <a href="reception.html">Reception</a>
-                        <a class="active" href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
+                        <a class="active" href="reception.html">Reception</a>
+                        <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
                     </div>
                 </div>  
             <a href="contactus.html">Contact</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <main>
-            
+            <h1>Helping to make your dreams come true...</h1>
+            <p>At Temple Inn & Suites we can accomodate indoor and outdoor events with ease. We offer our guests flexiblity by allowing your to customize your special day to fit your budget. Whether it is with our servies or those you have delegated we provide a private setting to ensure you have "your special day". </p>
+            <ul><h2>Amenities & Details:</h2>
+                <li>(3) Reception Areas:
+                    <ul><h3>Each Reception Area contains:</h3>
+                        <li>Covered Outdoor event space</li>
+                        <li>Indoor event space</li>
+                        <li>Wireless Internet access</li>
+                        <li>Handicap Accessible</li>
+                        <li>Access to kitchen facilities</li>
+                        <li>Dressing Room</li>
+                    </ul>
+                </li>
+
+                <li>
+                    <ul><h3>Service options available:</h3>
+                        <li>Waitstaff service</li>
+                        <li>Limited catering menu</li>
+                        <li>Music services</li>
+                    </ul>
+                </li>
+            </ul>
         </main>
         <footer class="swatch3">
                 <!--    <div class="navbar">
