--- a/assignments/termProject/services.html
+++ b/assignments/termProject/services.html
@@ -32,9 +32,9 @@
             <div class="dropdown">
                 <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
                     <div class="dropdown-Content">
-                        <a href="services.html">Services</a>
+                        <a class="active" href="services.html">Services</a>
                         <a href="reception.html">Reception</a>
-                        <a class="active" href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
+                        <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
                     </div>
                 </div>  
             <a href="contactus.html">Contact</a>
