--- a/assignments/termProject/temple.html
+++ b/assignments/termProject/temple.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body onload="temple.js">
+    <body onload="getTempleInformation()">
         <header id="swatch3" class="clearfix">
             <div class="box">
                 <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
