--- a/assignments/termProject/reception.html
+++ b/assignments/termProject/reception.html
@@ -40,7 +40,15 @@
             <a href="contactus.html">Contact</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
-        <main>
+        <main >
+            <div class="box">
+                <img src="images/Reception_apartment-architecture-ceiling-1035665.jpg" alt="">
+                <img src="images/Reception_asparagus-barbecue-bbq-675951.jpg" alt="asparagus with bbq">
+                <img src="images/Reception_candles-catering-celebration-265920.jpg" alt="reception tables">
+                <img src="images/Reception_baby-shower-birthday-buffet-587741.jpg" alt="buffet of treats">
+                <img src="images/Reception_ceremonial-chairs-curtain-1804684.jpg" alt="reception room display">
+                <img src="images/Reception_cake-celebration-delicious-1727415.jpg" alt="cakes">
+            </div>
             <h1>Helping to make your dreams come true...</h1>
             <p>At Temple Inn & Suites we can accomodate indoor and outdoor events with ease. We offer our guests flexiblity by allowing your to customize your special day to fit your budget. Whether it is with our servies or those you have delegated we provide a private setting to ensure you have "your special day". </p>
             <ul><h2>Amenities & Details:</h2>
@@ -93,10 +101,10 @@
                     </div>
                     <div id="date"></div>
                 </footer>
-        
                 <script src="scripts/currentdate.js"> </script>
                 <script src="scripts/hamburger.js"> </script>
                 <script src="scripts/temple.js"></script>
+                <script src="scripts/button.js"></script>
         
             </body>
         </html>
