--- a/assignments/termProject/reservations.html
+++ b/assignments/termProject/reservations.html
@@ -293,10 +293,9 @@
                 </div>
                 <div id="date"></div>
             </footer>
-    
             <script src="scripts/currentdate.js"> </script>
             <script src="scripts/hamburger.js"> </script>
             <script src="scripts/temple.js"></script>
-    
+            <script src="scripts/button.js"></script>
         </body>
     </html>
