--- a/assignments/termProject/services.html
+++ b/assignments/termProject/services.html
@@ -47,8 +47,6 @@
                 <figure>
                     <img src="images/Reception_ceremonial-chairs-curtain-1804684.jpg">
                 </figure>
-            </div>
-            <div class="box">
                 <figure>
                     <img src="images/FTTM_1a-bedroom-hotel-suite.jpg">
                 </figure>
@@ -108,10 +106,9 @@
                     </div>
                     <div id="date"></div>
                 </footer>
-        
                 <script src="scripts/currentdate.js"> </script>
                 <script src="scripts/hamburger.js"> </script>
                 <script src="scripts/temple.js"></script>
-        
+                <script src="scripts/button.js"></script>
             </body>
         </html>
