--- a/assignments/termProject/temple.html
+++ b/assignments/termProject/temple.html
@@ -45,7 +45,8 @@
 
         <main>
 
-            <section class="templePage"></section>        
+            <section class="templePage">
+            </section>        
         
         </main>
 
@@ -79,10 +80,9 @@
             </div>
             <div id="date"></div>
         </footer>
-
         <script src="scripts/currentdate.js"> </script>
         <script src="scripts/hamburger.js"> </script>
         <script src="scripts/temple.js"></script>
-
+        <script src="scripts/button.js"></script>
     </body>
 </html>
