--- a/assignments/termProject/contactus.html
+++ b/assignments/termProject/contactus.html
@@ -27,7 +27,15 @@
         </header>
         <div id="myTopNav" class="navbar">
             <a href="index.html">Home Page</a>
-            <a href="temple.html">Temples</a>
+            <div class="dropdown">
+                    <button class="dropbtn">Temple<i class="fa fa-caret-down"></i></button>
+                        <div class="dropdown-Content">
+                            <a href="temple_anchorage.html">Anchorage Alaska Temple</a>
+                            <a href="temple.html">Boise Idaho Temple</a>
+                            <a href="temple.html">Idaho Falls Idaho Temple</a>
+                            <a href="temple.html">Laie Hawaii Temple</a>
+                        </div>
+            </div>
             <a href="reservations.html">Reservations</a>
             <div class="dropdown">
                 <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
@@ -41,9 +49,14 @@
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <main>
-                <h2 class="centerText">Contact Us</h2>
+            <h1>Contact Us</h1>
+            <div>
+                <p>We are a specialized hotel chain that caters to patrons that are near The Church of Jesus Christ of Latter-day Saints temples around the world. We are a owner-operated company that caters to temple workers, patrons, and their families by providing specialized services and accomodations that meet their needs.</p>
+                <p>Our hotel accomodations and services are available to <strong>anyone willing to abide by the terms and policies outlined in our terms and conditions.</strong></p>
+            </div>
+
                 <form action="thankyou_contact.html" method="get"> 
-                    <h3 class="centerText">Contact Request Submission Form</h3>
+                    <h2 class="centerText">Contact Request Submission Form</h2>
                     <fieldset> 
                         <legend>Personal Information:</legend>
                         <div>
