--- a/assignments/termProject/temple_anchorage.html
+++ b/assignments/termProject/temple_anchorage.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body onload="getTempleInformation()">
+    <body onload="getTempleInformation(5879348)">
         <header id="swatch3" class="clearfix">
             <div class="box">
                 <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
@@ -29,7 +29,15 @@
         </header>
         <div id="myTopNav" class="navbar">
             <a href="index.html">Home Page</a>
-            <a class="active" href="temple.html">Temples</a>
+            <div class="dropdown">
+                    <button class="dropbtn">Temple<i class="fa fa-caret-down"></i></button>
+                        <div class="dropdown-Content">
+                            <a href="temple_anchorage.html">Anchorage Alaska Temple</a>
+                            <a href="temple.html">Boise Idaho Temple</a>
+                            <a href="temple.html">Idaho Falls Idaho Temple</a>
+                            <a href="temple.html">Laie Hawaii Temple</a>
+                        </div>
+            </div>
             <a href="reservations.html">Reservations</a>
             <div class="dropdown">
                 <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
@@ -46,9 +54,6 @@
         <main>
 
             <section class="templePage">
-                <div id="temperature"></div>
-                <div id="high"></div>
-                <div id="low"></div>
             </section>        
         
         </main>
