--- a/assignments/termProject/temple.html
+++ b/assignments/termProject/temple.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body onload="getTempleInformation()">
+    <body onload="temple.js">
         <header id="swatch3" class="clearfix">
             <div class="box">
                 <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
@@ -46,9 +46,6 @@
         <main>
 
             <section class="templePage">
-                <div id="temperature"></div>
-                <div id="high"></div>
-                <div id="low"></div>
             </section>        
         
         </main>
