--- a/assignments/termProject/temple_anchorage.html
+++ b/assignments/termProject/temple_anchorage.html
@@ -52,10 +52,9 @@
         </div>
 
         <main>
-
-            <section class="templePage">
+            <section getTempleInformation() class="templePage">
             </section>        
-        
+            <section getWeather(5879348)></section>
         </main>
 
 
