--- a/assignments/termProject/reception.html
+++ b/assignments/termProject/reception.html
@@ -48,6 +48,8 @@
                 <img src="images/Reception_baby-shower-birthday-buffet-587741.jpg" alt="buffet of treats">
                 <img src="images/Reception_ceremonial-chairs-curtain-1804684.jpg" alt="reception room display">
                 <img src="images/Reception_cake-celebration-delicious-1727415.jpg" alt="cakes">
+                <img src="images/RECEPTION_beautiful-bridal-bride-and-groom-1779414.jpg" alt="outdoor wedding ceremony">
+                <img src="images/RECEPTION_bouquet-roses-wedding-60528.jpg" alt="bouquet and rings">
             </div>
             <h1>Helping to make your dreams come true...</h1>
             <p>At Temple Inn & Suites we can accomodate indoor and outdoor events with ease. We offer our guests flexiblity by allowing your to customize your special day to fit your budget. Whether it is with our servies or those you have delegated we provide a private setting to ensure you have "your special day". </p>
