--- a/assignments/termProject/fullTimeTempleMissionary.html
+++ b/assignments/termProject/fullTimeTempleMissionary.html
@@ -63,6 +63,7 @@
                     <button type="submit" class="popUpBtn">Submit</button><br><br><br>
                     <button type="submit" class="popUpBtn cancel" onclick="closeForm()">Cancel</button>
                 </fieldset>
+            </form>
         </main>
         <script src="scripts/currentdate.js"> </script>
         <script src="scripts/hamburger.js"> </script>
