--- a/assignments/termProject/services.html
+++ b/assignments/termProject/services.html
@@ -45,10 +45,10 @@
             <h1>Temple Inn & Suites provides all the services you need in one place.</h1>
             <div class="box">
                 <figure>
-                    <img src="images/Reception_ceremonial-chairs-curtain-1804684.jpg">
+                    <img src="images/Reception_ceremonial-chairs-curtain-1804684.jpg" alt="ring ceremony">
                 </figure>
                 <figure>
-                    <img src="images/FTTM_1a-bedroom-hotel-suite.jpg">
+                    <img src="images/FTTM_1a-bedroom-hotel-suite.jpg" alt="suite">
                 </figure>
             </div>
 
