--- a/assignments/termProject/reception.html
+++ b/assignments/termProject/reception.html
@@ -42,7 +42,7 @@
         </div>
         <main >
             <div class="box">
-                <img src="images/Reception_apartment-architecture-ceiling-1035665.jpg" alt="">
+                <img src="images/Reception_apartment-architecture-ceiling-1035665.jpg" alt="ring ceremony set up">
                 <img src="images/Reception_asparagus-barbecue-bbq-675951.jpg" alt="asparagus with bbq">
                 <img src="images/Reception_candles-catering-celebration-265920.jpg" alt="reception tables">
                 <img src="images/Reception_baby-shower-birthday-buffet-587741.jpg" alt="buffet of treats">
@@ -53,9 +53,10 @@
             </div>
             <h1>Helping to make your dreams come true...</h1>
             <p>At Temple Inn & Suites we can accomodate indoor and outdoor events with ease. We offer our guests flexiblity by allowing your to customize your special day to fit your budget. Whether it is with our servies or those you have delegated we provide a private setting to ensure you have "your special day". </p>
-            <ul><h2>Amenities & Details:</h2>
-                <li>(3) Reception Areas:
-                    <ul><h3>Each Reception Area contains:</h3>
+            <h2>Amenities & Details:</h2>
+                <p>(3) Reception Areas:</p>
+                    <h3>Each Reception Area contains:</h3>
+                    <ul>
                         <li>Covered Outdoor event space</li>
                         <li>Indoor event space</li>
                         <li>Wireless Internet access</li>
@@ -63,16 +64,13 @@
                         <li>Access to kitchen facilities</li>
                         <li>Dressing Room</li>
                     </ul>
-                </li>
 
-                <li>
-                    <ul><h3>Service options available:</h3>
+                    <h3>Service options available:</h3>
+                    <ul>
                         <li>Waitstaff service</li>
                         <li>Limited catering menu</li>
                         <li>Music services</li>
                     </ul>
-                </li>
-            </ul>
         </main>
         <footer class="swatch3">
                 <!--    <div class="navbar">
