--- a/assignments/termProject/fullTimeTempleMissionary.html
+++ b/assignments/termProject/fullTimeTempleMissionary.html
@@ -43,8 +43,9 @@
         </div>
         <main>
             <h1>We offer full time temple missionaries a home away from home.</h1>
-            <div class="box">
+            <div class="opening">
                 <img src="images/FTTM_2-bedroom-hotel-suite.jpg" alt="2 bedroom suite">
+                <img src="images/FTTM_1-bedroom-hotel-suite.jpg" alt="1 bedroom suite">
             </div>
             <form action="thankyou.html" method="get" class="overlay">
                 <fieldset>
