--- a/assignments/termProject/reception.html
+++ b/assignments/termProject/reception.html
@@ -41,19 +41,17 @@
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <main >
-            <div class="box">
-                <img src="images/Reception_apartment-architecture-ceiling-1035665.jpg" alt="ring ceremony set up">
-                <img src="images/Reception_asparagus-barbecue-bbq-675951.jpg" alt="asparagus with bbq">
-                <img src="images/Reception_candles-catering-celebration-265920.jpg" alt="reception tables">
-                <img src="images/Reception_baby-shower-birthday-buffet-587741.jpg" alt="buffet of treats">
-                <img src="images/Reception_ceremonial-chairs-curtain-1804684.jpg" alt="reception room display">
-                <img src="images/Reception_cake-celebration-delicious-1727415.jpg" alt="cakes">
-                <img src="images/RECEPTION_beautiful-bridal-bride-and-groom-1779414.jpg" alt="outdoor wedding ceremony">
-                <img src="images/RECEPTION_bouquet-roses-wedding-60528.jpg" alt="bouquet and rings">
-            </div>
+
             <h1>Helping to make your dreams come true...</h1>
             <p>At Temple Inn & Suites we can accomodate indoor and outdoor events with ease. We offer our guests flexiblity by allowing your to customize your special day to fit your budget. Whether it is with our servies or those you have delegated we provide a private setting to ensure you have "your special day". </p>
             <h2>Amenities & Details:</h2>
+            <div class="opening">
+                    <img src="images/Reception_apartment-architecture-ceiling-1035665.jpg" alt="ring ceremony set up">
+                    <img src="images/Reception_candles-catering-celebration-265920.jpg" alt="reception tables">
+                    <img src="images/Reception_ceremonial-chairs-curtain-1804684.jpg" alt="reception room display">
+                    <img src="images/RECEPTION_beautiful-bridal-bride-and-groom-1779414.jpg" alt="outdoor wedding ceremony">
+                    <img src="images/RECEPTION_bouquet-roses-wedding-60528.jpg" alt="bouquet and rings">
+                </div>
                 <p>(3) Reception Areas:</p>
                     <h3>Each Reception Area contains:</h3>
                     <ul>
@@ -66,10 +64,16 @@
                     </ul>
 
                     <h3>Service options available:</h3>
-                    <ul>
+                    <div class="opening">
+                            <img src="images/Reception_asparagus-barbecue-bbq-675951.jpg" alt="asparagus with bbq">
+                            <img src="images/Reception_baby-shower-birthday-buffet-587741.jpg" alt="buffet of treats">
+                            <img src="images/Reception_cake-celebration-delicious-1727415.jpg" alt="cakes">
+                            <img src="images/RECEPTION_bouquet-roses-wedding-60528.jpg" alt="bouquet and rings">
+                        </div>                    <ul>
                         <li>Waitstaff service</li>
                         <li>Limited catering menu</li>
                         <li>Music services</li>
+                        <li>Flowers</li>
                     </ul>
         </main>
         <footer class="swatch3">
