--- a/assignments/termProject/services.html
+++ b/assignments/termProject/services.html
@@ -43,7 +43,7 @@
 
         <main>
             <h1>Temple Inn & Suites provides all the services you need in one place.</h1>
-            <div class="box">
+            <div class="opening">
                 <figure>
                     <img src="images/Reception_ceremonial-chairs-curtain-1804684.jpg" alt="ring ceremony">
                 </figure>
