--- a/assignments/termProject/index.html
+++ b/assignments/termProject/index.html
@@ -44,7 +44,7 @@
 
         <main>
             <h1 class="centerText">Grand Opening</h1>
-            <h2 class="centerText"> Now open in Houston, Texas</h1>
+            <h2 class="centerText"> Now open in Houston, Texas</h2>
             <div id="opening">
                 <img src="images/INDEX_Temple_Houston.jpg" alt="Houston Temple exterior">
                 <img src="images/INDEX_Temple_Houston(2).jpg" alt="Houston Temple exterior">
@@ -63,7 +63,8 @@
                         <li>On-premise restaurant</li>
                         <li>Continental breakfast served every morning (5 AM - 9 AM)</li>
                             <li>5 long-term suites
-                                <ul>Featuring:
+                                <div>Featuring:</div>
+                                <ul>
                                     <li>2 bedrooms</li>
                                     <li>2 bathrooms</li>
                                     <li>Living Room</li>
@@ -71,7 +72,7 @@
                                     <li>Fully stocked kitchen</li>
                                     <li>Weekly maid service</li>
                                     <li>Washer & Dryer</li>
-                                    <li> - All units are on ground floor</li>
+                                    <li>All units are on ground floor</li>
                                 </ul>
                             </li>
                         </ul>
