--- a/assignments/termProject/reservations.html
+++ b/assignments/termProject/reservations.html
@@ -27,20 +27,22 @@
         <div class="tagline"> "Providing services to those who provide services for others."</div>
     </header>
     <div id="myTopNav" class="navbar">
-        <a href="index.html">Home Page</a>
-        <a href="temple.html">Temples</a>
-        <a class="active" href="reservations.html">Reservations</a>
-        <div class="dropdown">
-            <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
-                <div class="dropdown-Content">
-                    <a href="services.html">Services</a>
-                    <a href="reception.html">Reception</a>
-                    <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
+            <div id="myTopNav" class="navbar">
+                    <a href="index.html">Home Page</a>
+                    <a href="temple.html">Temple</a>
+                    <a class="active" href="reservations.html">Reservations</a>
+                    <div class="dropdown">
+                        <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
+                            <div class="dropdown-Content">
+                                <a href="services.html">Services</a>
+                                <a href="reception.html">Reception</a>
+                                <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
+                            </div>
+                        </div>  
+                    <a href="contactus.html">Contact</a>
+                    <a href="citereferences.html">Cited Works</a>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
                 </div>
-            </div>  
-        <a href="contactus.html">Contact</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-    </div>
 
     <main class="clearfix clear">
         <h1 class="centerText">Reservations</h1>
