--- a/assignments/termProject/services.html
+++ b/assignments/termProject/services.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body onload="getTempleInformation()">
+    <body>
         <header id="swatch3" class="clearfix">
             <div class="box">
                 <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
@@ -26,33 +26,25 @@
             <div class="tagline"> "Providing services to those who provide services for others."</div>
         </header>
         <div id="myTopNav" class="navbar">
-            <a href="index.html">Home Page</a>
-            <a href="temple.html">Temples</a>
-            <a href="reservations.html">Reservations</a>
-            <div class="dropdown">
-                <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
-                    <div class="dropdown-Content">
-                        <a class="active" href="services.html">Services</a>
-                        <a href="reception.html">Reception</a>
-                        <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
-                    </div>
-                </div>  
-            <a href="contactus.html">Contact</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-        </div>
-
-        <main>
-            <h1>Temple Inn & Suites provides all the services you need in one place.</h1>
-            <div class="opening">
-                <figure>
-                    <img src="images/Reception_ceremonial-chairs-curtain-1804684.jpg" alt="ring ceremony">
-                </figure>
-                <figure>
-                    <img src="images/FTTM_1a-bedroom-hotel-suite.jpg" alt="suite">
-                </figure>
+                <a href="index.html">Home Page</a>
+                <a href="temple.html">Temple</a>
+                <a href="reservations.html">Reservations</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
+                        <div class="dropdown-Content">
+                            <a class="active" href="services.html">Services</a>
+                            <a href="reception.html">Reception</a>
+                            <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
+                        </div>
+                    </div>  
+                <a href="contactus.html">Contact</a>
+                <a href="citereferences.html">Cited Works</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
-
-            <p>We offer the following <em>Specialized Services</em> to temple patrons.</p>
+        <main>
+            <h1 class="centerText">We are able to provide all the services you need in one place.</h1>
+            <img class="fltRight" src="images/Reception_cake-celebration-delicious-1727415.jpg" alt="cakes">
+            <p>We offer the following <em>specialized services</em> to temple patrons.</p>
                 <ul>
                     <li>Access to changing rooms and bathroom facilities to those who have traveled far and need to change clothing prior to their visit to the temple.</li>
                     <li>We offer a low-cost playroom for short-term babysitting services for children of patrons. </li>
@@ -71,10 +63,9 @@
                     <li>Temple shuttle</li>
                     <li>Family history consultation and family ordinance card services.</li>
                 </ul>
-
-            
-            <button class="ctaButton" name="callToAction" type="button" onclick="openForm">Join our rewards program and get a <em>free</em> night.</button>
-
+            <p class="centerText">"As we work to create light for other,</p>
+            <p class="centerText">we naturally light our own way."</p>
+            <p class="centerText">~ May Anne Radmacher</p><br>
         </main>
 
         <footer class="swatch3">
