--- a/assignments/termProject/thankyou_contact.html
+++ b/assignments/termProject/thankyou_contact.html
@@ -24,22 +24,22 @@
             </div>
             <div class="tagline"> "Providing services to those who provide services for others."</div>
         </header>
-            <div id="myTopNav" class="navbar">
-            <a href="index.html">Home Page</a>
-            <a href="temple.html">Temples</a>
-            <a href="reservations.html">Reservations</a>
-            <div class="dropdown">
-                <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
-                    <div class="dropdown-Content">
-                        <a href="services.html">Services</a>
-                        <a href="reception.html">Reception</a>
-                        <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
-                    </div>
-                </div>  
-            <a href="contactus.html">Contact</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-        </div>
-            
+        <div id="myTopNav" class="navbar">
+                <a href="index.html">Home Page</a>
+                <a href="temple.html">Temple</a>
+                <a href="reservations.html">Reservations</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
+                        <div class="dropdown-Content">
+                            <a href="services.html">Services</a>
+                            <a href="reception.html">Reception</a>
+                            <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
+                        </div>
+                    </div>  
+                <a href="contactus.html">Contact</a>
+                <a href="citereferences.html">Cited Works</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            </div>
         <div>
             <h1 class="thankyou">Thank you for contacting Temple Inn & Suites.</h1>
             <p class="thankyou">We appreciate the time you have taken to submit your comments, concerns, ideas, or special needs. We value our guests and review each contact. Please allow a minimum of 48 hours for us to review and gather any necessary information prior to our contact. We thank you again for your time and will do our best to meet your expectations.</p>
