--- a/assignments/termProject/reception.html
+++ b/assignments/termProject/reception.html
@@ -1,33 +1,34 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Reception Page | Temple Inn Suites</title>
 
-        <!-- This the normalize.css file link that must be first before any other links!-->
-        <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Reception Page | Temple Inn Suites</title>
 
-        <!-- This is the link to the CSS file that will be used to format the css files-->
-        <link href="styles/small.css" type="text/css" rel="stylesheet" />
-        <link href="styles/medium.css" type="text/css" rel="stylesheet" />
-        <link href="styles/large.css" type="text/css" rel="stylesheet" />
+    <!-- This the normalize.css file link that must be first before any other links!-->
+    <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
 
-        <!-- This is the link to the icon imagees used. -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- This is the link to the CSS file that will be used to format the css files-->
+    <link href="styles/small.css" type="text/css" rel="stylesheet" />
+    <link href="styles/medium.css" type="text/css" rel="stylesheet" />
+    <link href="styles/large.css" type="text/css" rel="stylesheet" />
 
-    </head>
+    <!-- This is the link to the icon imagees used. -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <body>
-        <header id="swatch3" class="clearfix">
-            <div class="box">
-                <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
-            </div>
-            <div class="tagline"> "Providing services to those who provide services for others."</div>
-        </header>
-        <div id="myTopNav" class="navbar">
+</head>
+
+<body>
+    <header id="swatch3" class="clearfix">
+        <div class="box">
+            <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
+        </div>
+        <div class="tagline"> "Providing services to those who provide services for others."</div>
+    </header>
+    <div id="myTopNav" class="navbar">
             <a href="index.html">Home Page</a>
-            <a href="temple.html">Temples</a>
+            <a href="temple.html">Temple</a>
             <a href="reservations.html">Reservations</a>
             <div class="dropdown">
                 <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
@@ -38,77 +39,95 @@
                     </div>
                 </div>  
             <a href="contactus.html">Contact</a>
+            <a href="citereferences.html">Cited Works</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
-        <main >
+    <main>
 
-            <h1>Helping to make your dreams come true...</h1>
-            <p>At Temple Inn & Suites we can accomodate indoor and outdoor events with ease. We offer our guests flexiblity by allowing your to customize your special day to fit your budget. Whether it is with our servies or those you have delegated we provide a private setting to ensure you have "your special day". </p>
-            <h2>Amenities & Details:</h2>
-            <div class="opening">
-                    <img src="images/Reception_apartment-architecture-ceiling-1035665.jpg" alt="ring ceremony set up">
-                    <img src="images/Reception_candles-catering-celebration-265920.jpg" alt="reception tables">
-                    <img src="images/Reception_ceremonial-chairs-curtain-1804684.jpg" alt="reception room display">
-                    <img src="images/RECEPTION_beautiful-bridal-bride-and-groom-1779414.jpg" alt="outdoor wedding ceremony">
-                    <img src="images/RECEPTION_bouquet-roses-wedding-60528.jpg" alt="bouquet and rings">
-                </div>
-                <p>(3) Reception Areas:</p>
-                    <h3>Each Reception Area contains:</h3>
-                    <ul>
-                        <li>Covered Outdoor event space</li>
-                        <li>Indoor event space</li>
-                        <li>Wireless Internet access</li>
-                        <li>Handicap Accessible</li>
-                        <li>Access to kitchen facilities</li>
-                        <li>Dressing Room</li>
-                    </ul>
+        <h1 class="centerText">Helping to make your dreams come true...</h1>
+        <p>At Temple Inn & Suites we can accomodate indoor and outdoor events with ease. We offer our guests flexiblity
+            by allowing your to customize your special day to fit your budget. Whether it is with our servies or those
+            you have delegated we provide a private setting to ensure you have "your special day". </p>
+        <h2>Amenities & Details:</h2>
 
-                    <h3>Service options available:</h3>
-                    <div class="opening">
-                            <img src="images/Reception_asparagus-barbecue-bbq-675951.jpg" alt="asparagus with bbq">
-                            <img src="images/Reception_baby-shower-birthday-buffet-587741.jpg" alt="buffet of treats">
-                            <img src="images/Reception_cake-celebration-delicious-1727415.jpg" alt="cakes">
-                            <img src="images/RECEPTION_bouquet-roses-wedding-60528.jpg" alt="bouquet and rings">
-                        </div>                    <ul>
-                        <li>Waitstaff service</li>
-                        <li>Limited catering menu</li>
-                        <li>Music services</li>
-                        <li>Flowers</li>
-                    </ul>
-        </main>
-        <footer class="swatch3">
-                <!--    <div class="navbar">
+        <h3>Reception Areas:</h3>
+        <div id="opening">
+            <img class="reception" src="images/Reception_apartment-architecture-ceiling-1035665.jpg"
+                alt="ring ceremony set up">
+            <img class="reception" src="images/Reception_candles-catering-celebration-265920.jpg"
+                alt="reception tables">
+            <img class="reception" src="images/Reception_ceremonial-chairs-curtain-1804684.jpg"
+                alt="reception room display">
+            <img class="reception" src="images/RECEPTION_beautiful-bridal-bride-and-groom-1779414.jpg"
+                alt="outdoor wedding ceremony">
+        </div>
+        <h4>Each Reception Area contains:</h4>
+        <ul>
+            <li>Covered Outdoor event space</li>
+            <li>Indoor event space</li>
+            <li>Wireless Internet access</li>
+            <li>Handicap Accessible</li>
+            <li>Access to kitchen facilities</li>
+            <li>Dressing Room</li>
+        </ul>
+
+        <div id="opening">
+            <img class="reception" src="images/Reception_asparagus-barbecue-bbq-675951.jpg" alt="asparagus with bbq">
+            <img class="reception" src="images/Reception_baby-shower-birthday-buffet-587741.jpg" alt="buffet of treats">
+            <img class="reception" src="images/Reception_asparagus-barbecue-cuisine-361184.jpg"
+                alt="Grilled meat with asparagus">
+            <img class="reception" src="images/Reception_bakery-cupcakes-decorative-63462.jpg" alt="cupcakes">
+            <img class="reception" src="images/Reception_blur-breakfast-chef-262978.jpg" alt="pastries on a plate">
+        </div>
+        <h4>Service options available:</h4>
+        <ul>
+            <li>Waitstaff service</li>
+            <li>Limited catering menu</li>
+            <li>Music services</li>
+            <li>Flowers</li>
+        </ul>
+
+        <p>It is our pleasure to help you create memories that will last a lifetime.</p><br>
+    </main>
+    <footer class="swatch3">
+        <!--    <div class="navbar">
                         <a href="index.html">Home Page</a>
                         <a href="temple.html">Temples</a>
                         <a href="styleguide.html">Planning Document</a>
                         <a href="citereferences.html">Cite References</a>
                     </div> -->
-                    <address  onLoad="currentDate()" >
-                            <div class="contactMe, clearfix">
-                                                    <!--The div element for the map -->
-        
-                                <div class="nested1"><b>Temple Inn & Suites</b></div>
-                                <div class="mapouter gmap_canvas">
-                                        <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=800%20Montgomery%20Lane%20%23300%2C%20Bethesda%2C%20MD%2020814&t=&z=15&ie=UTF8&iwloc=&output=embed"> </iframe><a href="https://www.emojilib.com"></a>
-                                    </div> 
-                                <div class="nested2"><i class="fa fa-map-marker" style="font-size:24px"></i>4800 Montgomery Lane #300 </div>
-                                <div class="nested3">Bethesda, MD 20814  </div>
-                                <div class="nested4"><i class="fa fa-phone" style="font-size:24px"></i></div>
-                                <div class="nested5">208-555-6677  </div>
-                                <div class="nested6"><i class="fa fa-envelope-o" style="font-size:24px"></i> </div>
-                                <div class="nested7"><a href="mailto:reservations@templeinnsuites.com">reservations@templeinnsuites.com</a> </div>
-                            </div>
-                        </address>
-                    <br>
-                    <div class="centerText">
-                    &copy; 2019 - Cindy Jorgensen - Location: Alaska - <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
-                    </div>
-                    <div id="date"></div>
-                </footer>
-                <script src="scripts/currentdate.js"> </script>
-                <script src="scripts/hamburger.js"> </script>
-                <script src="scripts/temple.js"></script>
-                <script src="scripts/button.js"></script>
-        
-            </body>
-        </html>
+        <address onLoad="currentDate()">
+            <div class="contactMe, clearfix">
+                <!--The div element for the map -->
+
+                <div class="nested1"><b>Temple Inn & Suites</b></div>
+                <div class="mapouter gmap_canvas">
+                    <iframe id="gmap_canvas"
+                        src="https://maps.google.com/maps?q=800%20Montgomery%20Lane%20%23300%2C%20Bethesda%2C%20MD%2020814&t=&z=15&ie=UTF8&iwloc=&output=embed">
+                    </iframe><a href="https://www.emojilib.com"></a>
+                </div>
+                <div class="nested2"><i class="fa fa-map-marker" style="font-size:24px"></i>4800 Montgomery Lane #300
+                </div>
+                <div class="nested3">Bethesda, MD 20814 </div>
+                <div class="nested4"><i class="fa fa-phone" style="font-size:24px"></i></div>
+                <div class="nested5">208-555-6677 </div>
+                <div class="nested6"><i class="fa fa-envelope-o" style="font-size:24px"></i> </div>
+                <div class="nested7"><a
+                        href="mailto:reservations@templeinnsuites.com">reservations@templeinnsuites.com</a> </div>
+            </div>
+        </address>
+        <br>
+        <div class="centerText">
+            &copy; 2019 - Cindy Jorgensen - Location: Alaska - <a href="http://www.byui.edu/online">BYU-Idaho Online
+                Learning</a>
+        </div>
+        <div id="date"></div>
+    </footer>
+    <script src="scripts/currentdate.js"> </script>
+    <script src="scripts/hamburger.js"> </script>
+    <script src="scripts/temple.js"></script>
+    <script src="scripts/button.js"></script>
+
+</body>
+
+</html>
