--- a/assignments/termProject/temple.html
+++ b/assignments/termProject/temple.html
@@ -28,21 +28,21 @@
             <div class="tagline"> "Providing services to those who provide services for others."</div>
         </header>
         <div id="myTopNav" class="navbar">
-            <a href="index.html">Home Page</a>
-            <a class="active" href="temple.html">Temples</a>
-            <a href="reservations.html">Reservations</a>
-            <div class="dropdown">
-                <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
-                    <div class="dropdown-Content">
-                        <a href="services.html">Services</a>
-                        <a href="reception.html">Reception</a>
-                        <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
-                    </div>
-                </div>  
-            <a href="contactus.html">Contact</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-        </div>
-
+                <a href="index.html">Home Page</a>
+                <a class="active" href="temple.html">Temple</a>
+                <a href="reservations.html">Reservations</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
+                        <div class="dropdown-Content">
+                            <a href="services.html">Services</a>
+                            <a href="reception.html">Reception</a>
+                            <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
+                        </div>
+                    </div>  
+                <a href="contactus.html">Contact</a>
+                <a href="citereferences.html">Cited Works</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            </div>
         <main>
 
             <section class="templePage">
