--- a/assignments/termProject/thankyou.html
+++ b/assignments/termProject/thankyou.html
@@ -24,22 +24,22 @@
             </div>
             <div class="tagline"> "Providing services to those who provide services for others."</div>
         </header>
-            <div id="myTopNav" class="navbar">
-            <a href="index.html">Home Page</a>
-            <a href="temple.html">Temples</a>
-            <a href="reservations.html">Reservations</a>
-            <div class="dropdown">
-                <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
-                    <div class="dropdown-Content">
-                        <a href="services.html">Services</a>
-                        <a href="reception.html">Reception</a>
-                        <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
-                    </div>
-                </div>  
-            <a href="contactus.html">Contact</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-        </div>
-            
+        <div id="myTopNav" class="navbar">
+                <a href="index.html">Home Page</a>
+                <a href="temple.html">Temple</a>
+                <a href="reservations.html">Reservations</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
+                        <div class="dropdown-Content">
+                            <a href="services.html">Services</a>
+                            <a href="reception.html">Reception</a>
+                            <a href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
+                        </div>
+                    </div>  
+                <a href="contactus.html">Contact</a>
+                <a href="citereferences.html">Cited Works</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            </div>
         <div>
             <h1 class="thankyou">Thank you for your interest in the Full Time Missionary Suites.</h1>
             <p class="thankyou">We will gather the necessary paperwork and contact you with 72 hours of your request for information.</p>
